# 9fin

./: .gitignore  Dockerfile  Dockerfile_online  INSTRUCTIONS.md  README.md  build_offline_run.sh  build_online_run.sh  data.npy  p.py  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yml
.github/workflows/: format-python.yml
Docker/: Dockerfile
Docker/app/: entrypoint1.py  entrypoint2.py  entrypoint21.py
data/: pages_007.csv  texts_007.json  texts_12345.json
output/: output_file.json  output_file_007.json  output_file_norm.json  output_file_old.json
src/: offline_ingestion.py  online_ingestion_api.py  predict.py  util.py
tests/: offline_ingestion_test.py  online_ingestion_test.py  util_test.py
tests/resources/: sample_data.csv  sample_data.json  test_output.json
tmp/custommodel/: train_script.py
